Fix spacing for diagnostic iFrames

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,7 @@
 iframe.activator{
     min-height: 400px;
     min-width: 100%;
-    padding-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 
